Fixed MarqueeText component, showing tap button when archive finished and new archive loaded (only on iOS devices)

--- a/src/assets/styles/mobile/show.mobile.scss
+++ b/src/assets/styles/mobile/show.mobile.scss
@@ -117,6 +117,10 @@
                 padding: 2rem;
                 justify-content: space-between;
             }
+            .archive-player__finish {
+                top: -3.5rem;
+                right: 6rem;
+            }
             &__close {
                 right: unset;
                 top: 2rem;
